frontend/src/styles/index.scss
/* ... */
::selection {
	background-color: #3fa9c988;
}

#root {
	display: grid;
	grid-template-areas:
		"nav-tray header header"
		"nav-tray main   sidebar"
		"footer   footer footer";
	grid-template-rows: auto 1fr auto;
	grid-template-columns: auto 1fr auto;
	height: 100vh;
	background-color: $bg-200;
	color: $fg-200;
}

.nav-tray {
	width: 100%;
	display: grid;
	grid-template-areas:
		"room-nav channel-nav"
		"tray     tray       ";
	grid-template-rows: auto 1fr;
	grid-template-columns: auto 1fr;
}

.home {
	grid-area: main;
	background-color: $bg-200;
	color: $fg-200;
	padding: 1rem;
	overflow-y: auto;

	& button {
		margin: 2px 0;
	}
}

.room-home {
	grid-area: main;
	background-color: $bg-200;
	color: $fg-200;
	padding: 1rem;
	overflow-y: auto;

	& .thread-filter {
		border: solid $sep-500 1px;
		border-radius: 4px;
		overflow: hidden;

		& button {
			border: none;

			&.selected {
				background: $bg-150;
			}

			&:hover {
				background: $bg-200;
			}

			&.selected:hover {
				background: $bg-100;
			}
		}
	}
}

.thread-card {
	contain: content;
	background-color: $bg-300;
	margin: 8px 0;
	border: solid 1px $sep-400;
	border-radius: 4px;
	max-width: 800px;

	& > header {
		& > .top,
		& > .bottom {
			display: flex;
			width: 100%;
			background: none;
			border: none;
			text-align: left;
			font: inherit;
			color: inherit;
			padding: 4px 8px;
			cursor: pointer;
		}

		& > .top {
			align-items: center;
			gap: 8px;

			& > .spacer {
				@include truncate;
				flex: 1;
			}

			& > .time {
				color: $fg-500;
			}
		}

		& > .bottom {
			flex-direction: column;

			.dim {
				font-size: 0.8rem;
				color: $fg-500;
			}

			.description {
				margin-top: 8px;
			}
		}
	}

	& > .preview > details {
		padding: 0.25rem;
		cursor: pointer;
		appearance: details;
	}

	& > footer {
		cursor: pointer;
		text-align: center;
	}

	&:hover {
		// TODO: don't darken as much
		background-color: $bg-200;
	}
}

.thread-chat-sidebar {
	width: 100%;
	position: relative;

	& > .chat {
		width: 100%;
		height: 100%;
	}

	& > .close {
		position: absolute;
		top: 8px;
		right: 8px;
		background: $bg-100;
		z-index: 1;
		display: grid;
		place-items: center;
		height: 32px;
		width: 32px;
		border: none;
		border-radius: 50%;

		&:hover {
			background: $bg-300;
		}
	}
}

.message-input,
.comment-input {
	position: absolute;
	bottom: 0;
	width: 100%;
	background-image: linear-gradient(to top, $bg-200 25%, transparent);
	display: flex;
	flex-direction: column;
	padding: 8px;
	max-height: 50%;

	&.locked {
		cursor: not-allowed;

		& > .text > .upload {
			cursor: inherit;
			color: $sep-800;

			&:hover {
				background: none;
			}
		}

		& .editor .placeholder {
			color: $sep-800;
		}
	}

	& > footer {
		color: $fg-400;
		height: 8px;
		font-size: 0.8em;
		padding: 2px 2px;
		display: flex;

		.slowmode {
			font-family: var(--font-mono);
		}

		& > .typing {
			flex: 1;

			&::after {
				content: "";
				animation: dots infinite 800ms;
			}
		}
	}

	& > .attachments {
		position: absolute;
		top: 0;
		translate: 0 -100%;
		right: 4px;
		border: solid $sep-500 1px;
		border-radius: 4px;
		max-height: 320px;
		overflow: hidden auto;
		background: $bg-200;
		display: flex;
		flex-direction: column;
		box-shadow: 2px 2px 8px #1114;

		header {
			background: $bg-150;
			padding: 6px;
			margin-bottom: 4px;
			padding-left: 56px;
			line-height: 1;
		}

		ul {
			display: flex;
			flex-direction: column;
			gap: 4px;
			padding: 4px;
		}

		button {
			border: none;
			border-radius: 4px;
			height: 24px;
			width: 24px;
			display: flex;
			align-items: center;
			justify-content: center;
		}
	}

	& > .text {
		display: flex;
		background: $bg-300;
		border: solid $bg-400 1px;
		box-shadow: 2px 2px 8px #1114;
		border-radius: 4px;
		overflow: hidden;
		align-items: center;

		& > .upload {
			cursor: pointer;
			width: 2rem;
			height: 2rem;
			display: grid;
			place-items: center;
			font-weight: bold;

			&:hover {
				background: $bg-200;
			}

			& > input[type="file"] {
				display: none;
			}
		}

		& > .editor {
			flex: 1;
			border: none;
		}
	}
}

.message-input > .reply,
.comment-input > .reply {
	display: flex;
	border-top-right-radius: 4px;
	border-top-left-radius: 4px;
	border: solid 1px $sep-500;
	background-color: oklch(var(--color-bg1) / 0.8);
	overflow: hidden;

	& ~ .text {
		border-top-left-radius: 0;
		border-top-right-radius: 0;
		border-top: none;
	}

	& > .info {
		padding: 2px 8px;
		flex: 1;
	}

	& > .cancel {
		display: grid;
		place-items: center;
		width: 28px;
		border: none;
		background-color: $bg-200;

		&:hover {
			background-color: $bg-100;
		}
	}
}

.comment-input {
	display: flex;
	flex-direction: column;
	position: relative;

	& > .text {
		display: flex;
		background: $bg-300;
		border: solid $bg-400 1px;
		box-shadow: 2px 2px 8px #1114;
		border-radius: 4px;
		overflow: hidden;
		align-items: center;

		& > .upload {
			cursor: pointer;
			width: 2rem;
			height: 2rem;
			display: grid;
			place-items: center;
			font-weight: bold;

			&:hover {
				background: $bg-200;
			}

			& > input[type="file"] {
				display: none;
			}
		}

		& > .editor {
			flex: 1;
			border: none;
		}
	}
}

.quick-create {
	position: relative;
	background-image: none;
	padding: 8px 0;
}
/* ... */

